--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,35 @@
 body {
   font-family: Palatino;
-
 }
 
-#form-wrapper{
-  display: flex;
+.form-wraper{
+  display: grid;
 }
 
-/* .form-item{
+#new-search-form{
+  background-color: #F9B93F;
   padding: 10px;
 }
 
-#reading-list{
-  padding: 10px;
+.form-item{
+  padding: 5px;
+}
+
+.row{
   display: flex;
-  align-items: left;
-} */
+}
+
+#result-list{
+  display: flex;
+  /* grid-template-columns: 100px 100px 100px; */
+    /* grid-template-rows: 50px 50px; */
+}
 
 .result-box{
-  border: solid 3px red;
+  border: solid 3px #F9B93F;
   margin: 10px;
   border-radius: 10px;
-  /* border: solid 1px #4A7D90; */
-  background-color: #88B2CA;
-  padding: 10px;
+  background-color: #DFE5DD;
+  padding: 5px;
+  /* width: 200px; */
 }
